--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
+    "exphbs": "^1.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
